[FIX] web: solve the scrollbars issue in pie chart comparison mode.
task-1912583

--- a/addons/web/static/src/scss/graph_view.scss
+++ b/addons/web/static/src/scss/graph_view.scss
@@ -2,10 +2,12 @@
     .o_graph_container {
         height: 100%;
         overflow: auto;
+        display: flex;
         .o_graph_svg_container {
             direction: ltr#{"/*rtl:ignore*/"};
             height: 100%;
             overflow: auto;
+            flex: 1 1 auto;
             svg {
                 background-color: $o-view-background-color;
                 .nv-y {
